# pw-sim

./: .gitignore  CMakeLists.txt  README-Tire2.md  README.md  configure.md  fut-helper-prompt.txt  pw-sim.log.csv  pw-sim.toml
src/: SimConfig.hpp  main.cpp
src/config/: CliParser.cpp  CliParser.hpp  SimConfig.cpp  SimConfig.hpp  TomlLoader.cpp  TomlLoader.hpp
src/engine/: ChunkMetric.hpp  ProbeReader.cpp  ProbeReader.hpp  SimEngine.cpp  SimEngine.hpp  VirtualClock.cpp  VirtualClock.hpp  XrunPolicy.cpp  XrunPolicy.hpp
src/fut/: FutInterface.hpp  NamFut.hpp  RnnoiseFut.hpp  RubberbandFut.hpp  SpleeterFut.hpp  SpleeterRubberbandFut.hpp
src/fut/stubs/: GainFut.hpp  PassthroughFut.hpp  SlowFut.hpp
src/io/: AudioReader.cpp  AudioReader.hpp  AudioWriter.cpp  AudioWriter.hpp
src/metrics/: MetricsWriter.cpp  MetricsWriter.hpp
